--- a/mySmartHolyBasil/public/index.html
+++ b/mySmartHolyBasil/public/index.html
@@ -63,7 +63,7 @@
 
  <script src="scripts/app.js"></script> 
  <script src="scripts/controllers.js"></script>   
-  	<!-- <script src="scripts/services.js"></script> -->
+ <script src="scripts/services.js"></script> 
  <script src="scripts/routes.js"></script> 
 
   	<!-- <script src="scripts/directives.js"></script> -->
